Content tweak to some appeal view names + statements back in inquiry view

--- a/app/views/_includes/lpa/table-full-submission.html
+++ b/app/views/_includes/lpa/table-full-submission.html
@@ -1,5 +1,5 @@
 <h3 class="govuk-heading-l">
-  Contact and site
+  Appellant’s appeal
 </h3>
 
 {{ govukSummaryList({
@@ -68,7 +68,7 @@
 }) }}
 
 <h3 class="govuk-heading-l">
-  Documents
+  Appellant’s documents
 </h3>
 
 {{ govukSummaryList({
