--- a/app/views/manage/appeals/v8/appellant-statement.html
+++ b/app/views/manage/appeals/v8/appellant-statement.html
@@ -18,7 +18,7 @@
       Appeal {{ data['appealCode'] or '1345264' }}
     </span>
     <h1 class="govuk-heading-xl">
-      Appellant statement
+      Appellant’s statement
     </h1>
   </div>
 
