Appeal view 'new appeal' prototype link

--- a/app/views/manage/appeals/v8/appeal-details.html
+++ b/app/views/manage/appeals/v8/appeal-details.html
@@ -7,6 +7,11 @@
 {% endblock %}
 
 {% set prototypeLinks = [
+
+  {
+    href: '?questionnaire=&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=',
+    text: 'New appeal (not validated)'
+  },
   {
     href: '?questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=',
     text: 'Questionnaire stage'
