Appeal details view for appellants

--- a/app/views/_includes/appellant/table-lpa-proofs.html
+++ b/app/views/_includes/appellant/table-lpa-proofs.html
@@ -7,7 +7,7 @@
   rows: [
     {
       key: {
-        html: 'Local planning authority proof of evidence and summary',
+        html: 'Your proof of evidence and summary',
         classes: 'govuk-!-width-one-third'
       },
       value: {
