--- a/app/views/index.html
+++ b/app/views/index.html
@@ -79,6 +79,42 @@
           <a href="/appeal/ldc/">Lawful development certificate</a>
         </li>
       </ul>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
+        Appeal details
+      </h3>
+      <p class="govuk-body">
+        These show the appellant’s view of their appeal in its different stages.
+      </p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <a href="/appeal/appeals/v2/appeal-details??questionnaire=&lpa-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&lpa-proofs=">New appeal</a>
+        </li>
+        <li>
+          <a href="?questionnaire=complete&lpa-statement=complete&complete&final-comments=due&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&lpa-proofs=">LPA questionnaire and statement done / final comments due</a>
+        </li>
+        <li>
+          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&lpa-proofs=">Appellant final comments done</a>
+        </li>
+        <li>
+          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&appeal-type=&proofs=&lpa-proofs=">All final comments done</a>
+        </li>
+        <li>
+          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&complete&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=inquiry&proofs=due&lpa-proofs=">Inquiry: proof of evidence due</a>
+        </li>
+        <li>
+          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&appeal-type=inquiry&proofs=complete&lpa-proofs=complete">Inquiry: proof of evidence done</a>
+        </li>
+        <li>
+          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&appeal-type=&proofs=&lpa-proofs=">Inquiry: all proof of evidence done</a>
+        </li>
+
+        <li>
+          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&appeal-type=&proofs=&lpa-proofs=">Appeal decided</a>
+        </li>
+      </ul>
+
     {% endset -%}
 
     {% set manageHTML %}
