--- a/app/views/_includes/appellant/meta-full-appeal.html
+++ b/app/views/_includes/appellant/meta-full-appeal.html
@@ -15,7 +15,7 @@
 
 <dl class="govuk-summary-list appeal-details govuk-summary-list--no-border">
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
+    <dt class="govuk-summary-list__key govuk-!-width-one-third">
       Appeal type
     </dt>
     <dd class="govuk-summary-list__value">
@@ -47,7 +47,7 @@
       Applicant
     </dt>
     <dd class="govuk-summary-list__value">
-      Rachel Silver
+      Mariella Bidbod
     </dd>
   </div>
   <div class="govuk-summary-list__row">
