--- a/app/views/_includes/lpa/meta-full-appeal.html
+++ b/app/views/_includes/lpa/meta-full-appeal.html
@@ -14,7 +14,6 @@
 </style>
 
 <dl class="govuk-summary-list appeal-details govuk-summary-list--no-border">
-
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key govuk-!-width-one-third">
       Appeal type
@@ -52,7 +51,7 @@
       Applicant
     </dt>
     <dd class="govuk-summary-list__value">
-      Rachel Silver
+      Mariella Bidbod
     </dd>
   </div>
   <div class="govuk-summary-list__row">
