Changes to appellant and lpa metadata and appeal details

--- a/app/views/_includes/appellant/table-full-submission.html
+++ b/app/views/_includes/appellant/table-full-submission.html
@@ -16,11 +16,26 @@
     },
     {
       key: {
-        html: 'Named on the application',
-        classes: 'govuk-!-width-one-third'
+        html: 'Named on the application'
       },
       value: {
         html: 'Mariella Bidbod'
+      }
+    },
+    {
+      key: {
+        html: 'Application reference'
+      },
+      value: {
+        html: '23/04125/FUL'
+      }
+    },
+    {
+      key: {
+        html: 'Site address'
+      },
+      value: {
+        html: 'Haggis Farm Cottage<br>Cambridge Rd<br>Barton<br>Cambridge<br>CB23 7AT'
       }
     },
     {
@@ -57,7 +72,7 @@
     },
     {
       key: {
-        html: 'Appeal procedure'
+        html: 'Preferred procedure'
       },
       value: {
         html: 'Hearing'
