--- a/app/views/_includes/lpa/table-full-submission.html
+++ b/app/views/_includes/lpa/table-full-submission.html
@@ -25,6 +25,24 @@
     },
     {
       key: {
+        html: 'Application reference',
+        classes: 'govuk-!-width-one-third'
+      },
+      value: {
+        html: '23/04125/FUL'
+      }
+    },
+    {
+      key: {
+        html: 'Site address',
+        classes: 'govuk-!-width-one-third'
+      },
+      value: {
+        html: 'Haggis Farm Cottage<br>Cambridge Rd<br>Barton<br>Cambridge<br>CB23 7AT'
+      }
+    },
+    {
+      key: {
         html: 'Site fully owned'
       },
       value: {
@@ -57,7 +75,7 @@
     },
     {
       key: {
-        html: 'Appeal procedure'
+        html: 'Preferred procedure'
       },
       value: {
         html: 'Hearing'
