--- a/app/views/appeal/proofs-of-evidence/index.html
+++ b/app/views/appeal/proofs-of-evidence/index.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout-pins.html' %}
 
 {% set nav = false %}
-{% set title = 'Proofs of evidence' %}
+{% set title = 'Proof of evidence' %}
 
 {% block backLink %}
   {{ govukBackLink({
