--- a/app/views/appeal/proofs-of-evidence/v1/confirmation.html
+++ b/app/views/appeal/proofs-of-evidence/v1/confirmation.html
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       {{ govukPanel({
-        titleHtml: 'Proofs of evidence submitted',
+        titleHtml: 'Proof of evidence submitted',
         html: "Your reference number<br><strong>0123456</strong>"
       }) }}
 
