--- a/app/views/index.html
+++ b/app/views/index.html
@@ -89,29 +89,29 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/appeal/appeals/v2/appeal-details??questionnaire=&lpa-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&lpa-proofs=">New appeal</a>
+          <a href="/appeal/appeals/v2/appeal-details?procedure=&questionnaire=&lpa-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&lpa-proofs=">New appeal</a>
         </li>
         <li>
-          <a href="?questionnaire=complete&lpa-statement=complete&complete&final-comments=due&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&lpa-proofs=">LPA questionnaire and statement done / final comments due</a>
+          <a href="/appeal/appeals/v2/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=due&appellant-final-comments=&evidence=&appeal-decided=&proofs=&lpa-proofs=">LPA questionnaire and statement done / final comments due</a>
         </li>
         <li>
-          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&lpa-proofs=">Appellant final comments done</a>
+          <a href="/appeal/appeals/v2/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=&proofs=&lpa-proofs=">Appellant final comments done</a>
         </li>
         <li>
-          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&appeal-type=&proofs=&lpa-proofs=">All final comments done</a>
+          <a href="/appeal/appeals/v2/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&proofs=&lpa-proofs=">All final comments done</a>
         </li>
         <li>
-          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&complete&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=inquiry&proofs=due&lpa-proofs=">Inquiry: proof of evidence due</a>
+          <a href="/appeal/appeals/v2/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&complete&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=due&lpa-proofs=">Inquiry: proof of evidence due</a>
         </li>
         <li>
-          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&appeal-type=inquiry&proofs=complete&lpa-proofs=complete">Inquiry: proof of evidence done</a>
+          <a href="/appeal/appeals/v2/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&proofs=complete&lpa-proofs=complete">Inquiry: proof of evidence done</a>
         </li>
         <li>
-          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&appeal-type=&proofs=&lpa-proofs=">Inquiry: all proof of evidence done</a>
+          <a href="/appeal/appeals/v2/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&proofs=&lpa-proofs=">Inquiry: all proof of evidence done</a>
         </li>
 
         <li>
-          <a href="/appeal/appeals/v2/appeal-details?questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&appeal-type=&proofs=&lpa-proofs=">Appeal decided</a>
+          <a href="/appeal/appeals/v2/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&proofs=&lpa-proofs=">Appeal decided</a>
         </li>
       </ul>
 
@@ -133,32 +133,32 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="manage/appeals/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=&statement=&finalcomments=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="manage/appeals/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=&statement=&finalcomments=&proofs=&appellant-proofs=">
             Planning appeals (summary of progress)
           </a>
         </li>
         <li>
-          <a href="manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=&statement=&finalcomments=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=&statement=&finalcomments=&proofs=&appellant-proofs=">
             Planning appeals (list of appeals)
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=yes&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=yes&statement-banner=&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             Appeals list, questionnaire done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=yes&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=yes&final-comments-banner=&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             Appeals list, statement done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=yes&proofs-banner=&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=yes&proofs-banner=&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             Appeals list, final comments done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=yes&questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/?questionnaire-banner=&statement-banner=&final-comments-banner=&proofs-banner=yes&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             Appeals list, proof of evidence done
           </a>
         </li>
@@ -172,57 +172,57 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=&statement=&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?procedure=&questionnaire=&statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             New appeal
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=due&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=due&statement=due&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             Questionnaire due
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=due&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             Questionnaire valid, statement due
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=complete&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             LPA statement done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=due&appellant-final-comments=due&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=complete&final-comments=due&appellant-final-comments=due&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             All statements done / final comments due
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             LPA final comments done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             All final comments done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=&evidence=complete&appeal-decided=&appeal-type=inquiry&proofs=due&appellant-proofs=">
-            Appeal with proofs of evidence due
+          <a href="/manage/appeals/v8/appeal-details?procedure=&questionnaire=complete&statement=complete&final-comments=&evidence=complete&appeal-decided=&proofs=due&appellant-proofs=">
+            Appeal with proof of evidence due
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=&evidence=complete&appeal-decided=&appeal-type=inquiry&proofs=complete&appellant-proofs=">
-            Appeal with proofs of evidence complete
+          <a href="/manage/appeals/v8/appeal-details?procedure=&questionnaire=complete&statement=complete&final-comments=&evidence=complete&appeal-decided=&proofs=complete&appellant-proofs=">
+            Appeal with proof of evidence complete
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=&evidence=complete&appeal-decided=&appeal-type=inquiry&proofs=complete&appellant-proofs=complete">
-            Appeal with all (3rd party) proofs of evidence complete
+          <a href="/manage/appeals/v8/appeal-details?procedure=&questionnaire=complete&statement=complete&final-comments=&evidence=complete&appeal-decided=&proofs=complete&appellant-proofs=complete">
+            Appeal with all (3rd party) proof of evidence complete
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?questionnaire=complete&statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&appeal-type=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&proofs=&appellant-proofs=">
             Appeal decided
           </a>
         </li>
@@ -314,6 +314,7 @@
           <a href="interested/find-appeal/v9/appeal-search-no-results?search=number">No results (appeal reference)</a>
         </li>
       </ul>
+
       <h3 class="govuk-heading-s">
         Commenting on an appeal
       </h3>
