--- a/app/views/manage/proofs-of-evidence/v1/check-your-answers.html
+++ b/app/views/manage/proofs-of-evidence/v1/check-your-answers.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "Check your answers and submit your proofs of evience" %}
+{% set title = "Check your answers and submit your proof of evience" %}
 
 {% set nav = true %}
 
@@ -80,7 +80,7 @@
 
 {% block buttons %}
   {{ govukButton({
-    text: 'Submit proofs of evidence',
+    text: 'Submit proof of evidence',
     href: 'confirmation'
   }) }}
 {% endblock %}
