--- a/app/views/manage/proofs-of-evidence/v2/check-your-answers.html
+++ b/app/views/manage/proofs-of-evidence/v2/check-your-answers.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = "Check your answers and submit your proofs of evience" %}
+{% set title = "Check your answers and submit your proof of evience" %}
 
 {% set nav = true %}
 
@@ -62,7 +62,7 @@
       },
       {
         key: {
-          text: 'Witness proofs of evidence and summary'
+          text: 'Witness proof of evidence and summary'
         },
         value: {
           html: '<a href="#">Witness-details.pdf</a><br><a href="#">Witness-evidnce-a.pdf</a><br><a href="#">Witness-evidnce-b.pdf</a><br><a href="#">Witness-summary.pdf</a>'
@@ -83,7 +83,7 @@
 
 {% block buttons %}
   {{ govukButton({
-    text: 'Submit proofs of evidence',
+    text: 'Submit proof of evidence',
     href: 'confirmation'
   }) }}
 {% endblock %}
